k8s/filebeat-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: observability

spec:
  selector:
    matchLabels:
      app: filebeat

  template:
    metadata:
      labels:
        app: filebeat

    spec:
      serviceAccountName: filebeat

      terminationGracePeriodSeconds: 30

      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:9.5.0

          args:
            - "-c"
            - "/etc/filebeat.yml"
            - "-e"

          securityContext:
            runAsUser: 0

          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "200m"
              memory: "250Mi"

          volumeMounts:
            - name: config
              mountPath: /etc/filebeat.yml
              subPath: filebeat.yml
              readOnly: true

            - name: varlogcontainers
              mountPath: /var/log/containers
              readOnly: true

            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true

            - name: data
              mountPath: /usr/share/filebeat/data

      volumes:
        - name: config
          configMap:
            name: filebeat-config
            defaultMode: 0644

        - name: varlogcontainers
          hostPath:
            path: /var/log/containers

        - name: varlogpods
          hostPath:
            path: /var/log/pods

        - name: data
          hostPath:
            path: /var/lib/filebeat-data
            type: DirectoryOrCreate
