k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: eventsync

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
